# container-runtime-process-isolation

./: .gitignore  CMakeLists.txt  README.md  plan.md
include/: FilesystemManager.h  container.h
src/: Container.cpp  FilesystemManager.cpp  main.cpp
